# 369Algo

./: .gitignore  ARCHITECTURE.md  BROKER_INTEGRATION_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_ARCHITECTURE.md  README.md  SECURITY.md  STRATEGIES_FEATURE.md  package-lock.json  pyproject.toml
backend/: README.md  config.py  database.py  docker-compose.yml  env_example.txt  main.py  realtime_updater.py  requirements-minimal.txt  requirements.txt  test_db.py  test_news_api.py
backend/models/: __init__.py  broker.py  market_data.py  portfolio.py  strategy.py  trade.py  user.py  watchlist.py
backend/routers/: __init__.py  auth.py  broker.py  live_news.py  market_data.py  news.py  portfolio.py  settings.py  strategy.py  trading.py  watchlist.py
backend/schemas/: __init__.py  auth.py  broker.py  portfolio.py  strategy.py  trading.py  watchlist.py
backend/services/: broker_service.py  cache_service.py  fyers_service.py  live_news_service.py  market_data_service.py  news_service.py  portfolio_service.py  strategy_service.py  timeseries_service.py
frontend/: DARK_THEME_DEMO_README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: DarkTradingDemo.tsx  FyersCustomButtons.tsx  FyersOrderPlacement.tsx
frontend/src/components/common/: BrokerConnection.tsx  ErrorBoundary.tsx  ThemeToggle.tsx  TradingViewChart.tsx
frontend/src/components/layout/: Navbar.tsx  Sidebar.tsx
frontend/src/config/: endpoints.ts
frontend/src/contexts/: AuthContext.tsx  SidebarContext.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  MarketData.tsx  News.tsx  Options.tsx  Orders.tsx  Portfolio.tsx  Register.tsx  Screeners.tsx  Settings.tsx  Strategies.tsx  Trading.tsx  Watchlist.tsx
frontend/src/services/: api.ts  fyersService.ts  liveNewsService.ts
frontend/src/styles/: GlobalStyles.ts  theme.ts
frontend/src/types/: react-icons.d.ts  tradingview.d.ts
